# C-haobin

./: .gitignore  README.md
day01-C语言概述/: 1.HelloWorld.c  2.二元一次方程求解.c  3.内存泄漏.c  CMakeLists.txt
day02-预备知识/: 1.helloworld.c  2.数据类型.c  3.变量.c  4.进制.c  5.ASC2.c  6.代码规范.c  7.不同类型相互赋值.c  CMakeLists.txt
day03-输入输出函数/: 1.printf的用法.c  2.scanf的用法.c  3.scanf高级用法.c  4.运算符.c  CMakeLists.txt
day04-流程控制/: 1.1选择.c  1.2成绩的例子.c  1.3互换两个数字.c  1.4三个数排序.c  1.5.c  2.10一元二次方程.c  2.11switch用法.c  2.12break与循环.c  2.13continue.c  2.1为什么需要循环.c  2.2习题.c  2.3类型转换.c  2.4多层循环的嵌套.c  2.5前自增与后自增的区别.c  2.6三目运算符.c  2.7回文数.c  2.8斐波那契数列.c  2.9wihle循环.c  CMakeLists.txt
day05-数组/: 1.数组的使用.c  2.二维数组的使用.c  3.把数组元素倒过来.c  CMakeLists.txt
day06-函数/: 1.函数第一个例子.c  2.函数例子2.c  3.函数举例3.c  4.如何合理设计函数.c  5.全局变量与局部变量.c  6.递归.c  CMakeLists.txt
day07-指针/: 1.指针热身.c  10.多级指针.c  11.静态变量不能跨函数.c  12.动态内存可以跨函数使用.c  2.经典程序_交换两个数的值.c  3.指针与数组1.c  4.确定一个数组需要几个参数.c  5.一个指针变量占几个字节.c  6.指针变量的运算.c  7.传统数组的缺陷.c  8.malloc的使用.c  9.动态一维数组.c  CMakeLists.txt
day08-结构体/: 1.为什么需要结构体.c  2.三种定义方式.c  3.如何取出结构体中的成员.c  4.1结构体作为函数传参.c  4.2传地址还是传内容.c  5.冒泡排序.c  6.学生管理系统.c  CMakeLists.txt
day09-补充知识/: 1.枚举的定义.c  10.c  2.枚举举例.c  3.补码.c  4.链表.c  5.位运算符.c  6.求一到一千的和.c  7.c  8.c  9.c  CMakeLists.txt  test.c
