cmake_minimum_required(VERSION 3.18)
project(8 C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(1 1.为什么需要结构体.c)
add_executable(2 2.三种定义方式.c)
add_executable(3 3.如何取出结构体中的成员.c)
add_executable(4.1 4.1结构体作为函数传参.c)
add_executable(4.2 4.2传地址还是传内容.c)
add_executable(5 5.冒泡排序.c)
add_executable(6 6.学生管理系统.c)