cmake_minimum_required()
project(9 C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(1 1.枚举的定义.c)
add_executable(2 2.枚举举例.c)
add_executable(3 3.补码.c)
add_executable(4 4.链表.c)
add_executable(5 5.位运算符.c)
add_executable(test test.c)
add_executable(6 6.求一到一千的和.c)
add_executable(7 7.c)
add_executable(8 8.c)
add_executable(9 9.c)
target_link_libraries (9 m)

add_executable(10 10.c)
target_link_libraries (10 m)
